<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/padding20"
        android:paddingRight="@dimen/padding20"
        android:paddingTop="@dimen/padding80"
        >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height23"
            android:background="@drawable/selector_edittext"
            android:hint="用户名"
            android:maxLength="12"
            android:textColorHint="@android:color/white"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height23"
            android:layout_below="@+id/username"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/selector_edittext"
            android:hint="密码"
            android:password="true"
            android:textColorHint="@android:color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="@dimen/margin15"
            android:layout_toLeftOf="@+id/register"
            android:text="还没有账号？"
            android:textColor="#bdbdbb"
            android:textSize="@dimen/textsize18"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/password"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin15"
            android:text="注册"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/textsize18"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height23"
            android:layout_below="@+id/register"
            android:layout_marginTop="@dimen/margin15"
            android:background="@android:color/holo_blue_light"
            android:enabled="false"
            android:text="登 陆"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize18"/>
    </RelativeLayout>
</ScrollView>